--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ public class FootballOutput {
      */
     public static void main(String[] args) throws FileNotFoundException {
        // set variables for files
+       // This is Jingxian Huang's comment
         Scanner inFile = new Scanner(new FileReader("footballdata.txt"));
         //set up program variables
         int ticketBox, boxNum, ticketSideline, sidelineNum, ticketPremium,premiumNum,ticketGeneral,generalNum,totalAmount;
